Updated fieldname parameter
